--- a/style.css
+++ b/style.css
@@ -169,3 +169,7 @@ a, a:hover, a:active, a:visited{
     text-shadow: 2px 2px 10px rgb(0, 0, 0);
     width: 60px;
 }
+
+.text-left{
+    text-align: left;
+}
