--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ html {
     text-align: center;
 }
 
+.dropdown-item{
+    color: black;
+    text-shadow: none;
+}
+
 .navbar-spacing{
     padding-left: 15px;
     padding-right: 15px;
@@ -23,6 +28,7 @@ body{
     background-image: url(img/background/home-bck.png);
     background-repeat: no-repeat;
     background-color: rgb(14, 17, 33);
+    text-shadow: 2px 2px 10px rgb(0, 0, 0);
 }
 
 
